--- a/partials/_edit_form.html
+++ b/partials/_edit_form.html
@@ -51,7 +51,7 @@
         </tr>
         <tr>
           <th>
-            {{strJahrgang}}
+            {{strYear}}
           </th>
           <td>
             <input class="form-control" id="year" name="year" required pattern="[0-9]{4}" />
