--- a/partials/_show.html
+++ b/partials/_show.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <th>
-            {{strJahrgang}}
+            {{strYear}}
           </th>
           <td>
             {{document.year}}
