--- a/partials/_edit_form.html
+++ b/partials/_edit_form.html
@@ -99,14 +99,15 @@
       </tbody>
     </table>
     <h4 id="arbeitSearchwords"></h4>
-    <div id="add" class="form-inline editOnly">
-      <span class="input-group-btn">
-        <input class="form-control" id="schlagwort" placeholder="Neues Schlagwort" list="schlagwoerter" />
-        <button type="button" class="btn btn-success addButton" onclick="searchword.add();">
-          <i class="glyphicon glyphicon-plus"></i>
-        </button>
-      </span>
-    </div>
+    <div id="add" class="form-group editOnly">
+      <div class="input-group">
+          <input class="form-control" id="schlagwort" placeholder="Neues Schlagwort" list="schlagwoerter">
+          <span class="input-group-btn">
+            <input onclick="searchword.add();" type="button" value="+" class="btn btn-success form-append addButton">
+          </span>
+      </div>
+   </div>
+
     <div class="form-group text-right editOnly" id="leaveButtons">
       <button id="resetButton" class="btn btn-danger">
         <span class="glyphicon glyphicon-remove"></span> Abbrechen
